// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-deno-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-deno-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-nodejs-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-nodejs-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-vercel-edge-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-vercel-edge-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-workerd-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-client-workerd-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_fast_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-wasm-compiler-edge-vercel-edge-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_fast_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-wasm-compiler-edge-vercel-edge-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_fast_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-wasm-compiler-edge-workerd-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_fast_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-fast-wasm-compiler-edge-workerd-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_fast_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_fast_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_fast_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-deno-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-deno-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-nodejs-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-nodejs-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-vercel-edge-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-vercel-edge-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-workerd-cjs.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.js"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.js")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-client-workerd-esm.ts 1`] = `
"
async function decodeBase64AsWasm(wasmBase64: string): Promise<WebAssembly.Module> {
  const { Buffer } = await import('node:buffer')
  const wasmArray = Buffer.from(wasmBase64, 'base64')
  return new WebAssembly.Module(wasmArray)
}

config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const { wasm } = await import("./query_compiler_small_bg.postgresql.wasm-base64.mjs")
    return await decodeBase64AsWasm(wasm)
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-wasm-compiler-edge-vercel-edge-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_small_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-wasm-compiler-edge-vercel-edge-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_small_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-wasm-compiler-edge-workerd-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_small_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_small_bg.js"
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript > compiler-small-wasm-compiler-edge-workerd-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_small_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_small_bg.wasm?module")
    return module
  },

  importName: "./query_compiler_small_bg.js"
}"
`;
